fix card image overflow

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -44,6 +44,7 @@
 .card__image {
   width: 100%;
   height: auto;
+  max-height: 324px;
   object-fit: cover;
   padding: 0;
   margin: 0;
